src/test/cli/radosgw-admin/help.t
@@ -24,6 +24,7 @@
     bucket rm                  remove bucket
     bucket check               check bucket index
     bucket reshard             reshard bucket
+    bucket fixmpleak           remove leaked multipart objects that have accumulated from retries
     bi get                     retrieve bucket index object entries
     bi put                     store bucket index object entries
     bi list                    list raw bucket index entries
